      Add a new test program for pcap_activate().
      Make NetBSD build warning-free.
      Make Sun C build warning-free.
      Make FreeBSD, Linux and macOS builds warning-free.
      Fix propagation of cc_werr_cflags() output.
      Print MAC addresses in findalldevstest.
      When necessary, trust the OS to implement ffs().
      Fix HCI_CHANNEL_MONITOR detection with musl libc.
    Hurd:
      Support network capture devices too.
      Fix a few device activation bugs.
      Count and timestamp packets better.
      Add kernel filtering, fix userland filtering.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 1.10.5 libpcap release (so far!)
    Source code:
      Spell WirelessHART details properly.
      Mark pcap_vasprintf() as printf-like.
      Finalize moving of bpf_filter.c. (GH #1166)
      Remove an unneeded argument from gen_mcode6().
      Don't do some Berkeley YACC workarounds with YACC releases not
        requiring them.
      Use correct data types rather than int in some cases.
      Squelch compiler warning in grammar.c.
      Fix findalldevtest compilation if IPv6 isn't enabled.
      Rename helper routines for pcap modules to have names beginning with
      pcapint_, to avoid namespace collisions for code linking statically
      with libpcap.
      Avoid casting hack for the Windows cleanup-on-exit routine.
      Use %zu format for one case of printing a size_t.
      Fix some Coverity errors.
      Fix availabilities of some functions to match reality.
      pcap: make the seconds and microseconds/nanoseconds fields unsigned.
    Thread safety:
      Make some static variables thread-local; fixes issue #1174.
    Packet filtering:
      Improve reporting of some invalid filter expressions.
      Return an error from pcap_compile() if the scanner fails to initialize.
      Optimizer fix from Archit Shah to recompute dominators after
        moving code (#976); fixes #945 (although the resulting filter